add item component

--- a/app/src/app/item/item.component.html
+++ b/app/src/app/item/item.component.html
@@ -1,3 +1,16 @@
-<p>
-  item works!
-</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>{{ item.name }}</mat-card-title>
+  </mat-card-header>
+  <img
+    mat-card-image
+    [alt]="item.description"
+    [src]="item.imageUrl"
+  >
+  <mat-card-content>
+    <p>{{ item.price }}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>Buy</button>
+  </mat-card-actions>
+</mat-card>
