--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -11,15 +11,13 @@
           name="search"
           placeholder="Search..."
           autocomplete="off"
-        >
+        />
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
     </div>
   </div>
   <div class="content">
-    <div class="filter">
-
-    </div>
+    <div class="filter"></div>
     <div class="items"></div>
   </div>
 </div>
