--- a/app/src/app/item/item.component.html
+++ b/app/src/app/item/item.component.html
@@ -2,11 +2,7 @@
   <mat-card-header>
     <mat-card-title>{{ item.name }}</mat-card-title>
   </mat-card-header>
-  <img
-    mat-card-image
-    [alt]="item.description"
-    [src]="item.imageUrl"
-  >
+  <img mat-card-image [alt]="item.description" [src]="item.imageUrl" />
   <mat-card-content>
     <p>{{ item.price }}</p>
   </mat-card-content>
