--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,6 +1,6 @@
 body {
   background: #fafafa;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .container {
@@ -11,12 +11,16 @@ body {
 }
 
 .mat-typography {
-  h1, h2, h3, h4, h5, h6 {
-    font-family: 'Merriweather', serif;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Merriweather", serif;
   }
 
   p {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
   }
 }
-
