--- a/app/src/app/item-page/item-page.component.html
+++ b/app/src/app/item-page/item-page.component.html
@@ -5,6 +5,9 @@
   </div>
   <div class="right">
     <h2>{{ item.name }}</h2>
+    <p>
+      <i>{{ item.category }}</i>
+    </p>
     <p>{{ item.description }}</p>
     <div class="price">
       <span>Price: </span>
