--- a/app/src/app/item-page/item-page.component.scss
+++ b/app/src/app/item-page/item-page.component.scss
@@ -24,6 +24,10 @@
       line-height: normal;
       font-size: 40px;
     }
+
+    .editorial-reviews {
+      margin: 32px 0 8px 0;
+    }
   }
 }
 
