--- a/app/src/app/search/search.component.html
+++ b/app/src/app/search/search.component.html
@@ -32,7 +32,7 @@
     </mat-option>
     <ng-container *ngIf="searchQuery && searchQuery.length > 3">
       <mat-option [value]="searchQuery"
-        >Search for "{{ searchQuery }}"</mat-option
+        >Search for "{{ searchQuery }}"...</mat-option
       >
     </ng-container>
   </mat-autocomplete>
