--- a/app/src/app/item/item.component.html
+++ b/app/src/app/item/item.component.html
@@ -2,6 +2,9 @@
   <mat-card-header>
     <mat-card-title>
       <a [routerLink]="['/item', item._id]">{{ _item.name }}</a>
+      <ng-container *ngIf="_item.category">
+        <small>&nbsp;| {{ _item.category }}</small>
+      </ng-container>
     </mat-card-title>
   </mat-card-header>
   <img
