--- a/app/src/app/search-page/search-page.component.html
+++ b/app/src/app/search-page/search-page.component.html
@@ -1,6 +1,17 @@
-<h1>
+<h1 *ngIf="searchQuery && searchQuery.length">
   Search results for - <i>"{{ searchQuery }}"</i>
 </h1>
+
+<div>
+  <mat-form-field>
+    <mat-label>Category</mat-label>
+    <mat-select [formControl]="categoryControl">
+      <mat-option *ngFor="let category of categories" [value]="category.value">
+        {{ category.name }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
 
 <p>Showing page {{ page }} of {{ results }} results.</p>
 
