--- a/app/src/app/search-page/search-page.component.html
+++ b/app/src/app/search-page/search-page.component.html
@@ -15,6 +15,9 @@
   <mat-form-field appearance="outline">
     <mat-label>Publication/Release year</mat-label>
     <mat-select [formControl]="publicationYearControl">
+      <mat-option [value]="ALL_PUBLICATION_YEARS"
+        >All Publication/Release years</mat-option
+      >
       <mat-option *ngFor="let year of publicationYears" [value]="year">
         {{ year }}
       </mat-option>
