add search hint

--- a/app/src/app/search/search.component.html
+++ b/app/src/app/search/search.component.html
@@ -37,4 +37,5 @@
     </ng-container>
   </mat-autocomplete>
   <mat-icon matSuffix>search</mat-icon>
+  <mat-hint>Search Author, Book Name, ISBN, Phrase...</mat-hint>
 </mat-form-field>
