--- a/app/src/app/item/item.component.html
+++ b/app/src/app/item/item.component.html
@@ -11,6 +11,9 @@
       <ng-container *ngIf="_item.category">
         <small>&nbsp;| {{ _item.category }}</small>
       </ng-container>
+      <ng-container *ngIf="_item.author">
+        <small>&nbsp;| {{ _item.author }}</small>
+      </ng-container>
     </mat-card-title>
   </mat-card-header>
   <img
