--- a/app/src/app/search-page/search-page.component.html
+++ b/app/src/app/search-page/search-page.component.html
@@ -24,6 +24,16 @@
     </mat-select>
   </mat-form-field>
 
+  <mat-form-field appearance="outline">
+    <mat-label>Sort by</mat-label>
+    <mat-select [formControl]="sortControl">
+      <mat-option [value]="SORT_BY_RELEVANCE">Relevance</mat-option>
+      <mat-option *ngFor="let sort of sorts" [value]="sort.value">
+        {{ sort.name }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
   <div class="search-button">
     <button mat-raised-button color="primary" (click)="search()">Search</button>
   </div>
