--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="header">
     <div class="left-column">
-      <h1><a [routerLink]="['/']">Book Shop</a></h1>
+      <h1>
+        <a [routerLink]="['/']">Book Shop</a>
+      </h1>
+      <h3>&nbsp;| <a [routerLink]="['/search']">Search</a></h3>
     </div>
     <div class="right-column">
       <app-search></app-search>
