--- a/app/src/app/app.component.scss
+++ b/app/src/app/app.component.scss
@@ -4,6 +4,7 @@
   display: grid;
   grid-template-columns: auto auto;
   padding: 40px 12px 8px 12px;
+  border-bottom: 2px solid $primary;
 
   .left-column {
     display: flex;
