change name of website and remove favicon

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="header">
     <div class="left-column">
       <h1>
-        <a [routerLink]="['/']">Book Shop</a>
+        <a [routerLink]="['/']">The Book Shop</a>
       </h1>
       <h3>&nbsp;| <a [routerLink]="['/search']">Search</a></h3>
     </div>
